--- a/ripple.config
+++ b/ripple.config
@@ -13,7 +13,13 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
+    <Dependency Name="FubuMVC.Core" Version="1.1.0.1504" Mode="Float" />
+    <Dependency Name="FubuMVC.Katana" Version="1.1.0.1504" Mode="Float" />
+    <Dependency Name="FubuMVC.OwinHost" Version="1.1.0.1504" Mode="Float" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
+    <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
+    <Dependency Name="Owin.Extensions" Version="0.6.4" Mode="Fixed" />
+    <Dependency Name="Owin.Types" Version="0.8.5" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
     <Dependency Name="Spark" Version="1.7.5.0" Mode="Fixed" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
