--- a/src/FubuMVC.Diagnostics.Tests/ripple.dependencies.config
+++ b/src/FubuMVC.Diagnostics.Tests/ripple.dependencies.config
@@ -6,13 +6,19 @@ FubuMVC.Core.Assets
 FubuMVC.Core.UI
 FubuMVC.Core.View
 FubuMVC.JQueryUI
+FubuMVC.Katana
 FubuMVC.Media
 FubuMVC.Navigation
+FubuMVC.OwinHost
 FubuMVC.SlickGrid
+FubuMVC.StructureMap
 FubuMVC.TwitterBootstrap
 FubuTestingSupport
 HtmlTags
 NUnit
+Owin
+Owin.Extensions
+Owin.Types
 RhinoMocks
 structuremap
 structuremap.automocking
