--- a/packaging/nuget/fubumvc.diagnostics.nuspec
+++ b/packaging/nuget/fubumvc.diagnostics.nuspec
@@ -1,5 +1,5 @@
-<?xml version="1.0"?>
-<package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>FubuMVC.Diagnostics</id>
     <version>0.0</version>
@@ -12,7 +12,8 @@
     <description>A complete look into what's going on inside your FubuMVC application. Once active, diagnostics will be found under /_fubu</description>
     <tags>fubumvc diagnostics</tags>
     <dependencies>
-      <dependency id="FubuMVC.Core" version="0.9.9.1274" />
+      <dependency id="FubuCore" version="1.2.0.260" />
+      <dependency id="FubuMVC.Core" version="1.2.0.1601" />
       <dependency id="FubuMVC.Core.UI" version="0.9.9.49" />
       <dependency id="FubuMVC.Core.Assets" version="0.9.9.43" />
       <dependency id="FubuMVC.JQueryUI" />
@@ -21,7 +22,7 @@
       <dependency id="FubuMVC.Navigation" version="0.9.0.1" />
     </dependencies>
   </metadata>
-  <files>
+  <files xmlns="">
     <file src="..\..\src\FubuMVC.Diagnostics\bin\FubuMVC.Diagnostics.*" target="lib\net40" />
   </files>
 </package>
