--- a/ripple.config
+++ b/ripple.config
@@ -13,9 +13,21 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="FubuMVC.Core" Version="1.1.0.1504" Mode="Float" />
-    <Dependency Name="FubuMVC.Katana" Version="1.1.0.1504" Mode="Float" />
-    <Dependency Name="FubuMVC.OwinHost" Version="1.1.0.1504" Mode="Float" />
+    <Dependency Name="Bottles" Version="2.0.0.549" Mode="Float" />
+    <Dependency Name="FubuCore" Version="1.2.0.260" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.2.0.1601" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.527" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.560" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.545" Mode="Float" />
+    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.311" Mode="Float" />
+    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1601" Mode="Float" />
+    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.178" Mode="Float" />
+    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1601" Mode="Float" />
+    <Dependency Name="FubuMVC.Spark" Version="1.0.0.545" Mode="Float" />
+    <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1601" Mode="Float" />
+    <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.635" Mode="Float" />
+    <Dependency Name="FubuTestingSupport" Version="1.2.0.260" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.0.0.180" Mode="Float" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
     <Dependency Name="Owin.Extensions" Version="0.6.4" Mode="Fixed" />
@@ -26,5 +38,8 @@
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
   </Nugets>
   <Groups />
+  <References>
+    <IgnoreAssemblies />
+  </References>
   <Nuspecs />
 </ripple>
