--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -77,6 +77,9 @@
       <HintPath>..\packages\HtmlTags\lib\4.0\HtmlTags.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Owin">
+      <HintPath>..\packages\FubuMVC.Katana\lib\net40\Microsoft.Owin.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Owin.Host.HttpListener">
       <HintPath>..\packages\FubuMVC.Katana\lib\net40\Microsoft.Owin.Host.HttpListener.dll</HintPath>
     </Reference>
