--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -129,6 +129,8 @@
     <Compile Include="debugging.cs" />
     <Compile Include="DiagnosticsExtensionTester.cs" />
     <Compile Include="InteractionContextExtensions.cs" />
+    <Compile Include="Model\DiagnosticChainTester.cs" />
+    <Compile Include="Model\DiagnosticGroupTester.cs" />
     <Compile Include="Requests\BehaviorNodeTraceTagTester.cs" />
     <Compile Include="Requests\HttpRequestVisualizationTester.cs" />
     <Compile Include="Requests\RequestStepTester.cs" />
@@ -151,7 +153,6 @@
     <Compile Include="Runtime\Tracing\RequestLogBuilderTester.cs" />
     <Compile Include="Runtime\Tracing\RequestTraceListenerTester.cs" />
     <Compile Include="Runtime\Tracing\DiagnosticBehaviorTester.cs" />
-    <Compile Include="Models\SampleGridModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Tracing\RequestTraceTester.cs" />
     <Compile Include="Visualization\DescriptionWriterTester.cs" />
