--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -188,6 +188,8 @@
     <Compile Include="DiagnosticsChromeExtension.cs" />
     <Compile Include="DiagnosticsSettings.cs" />
     <Compile Include="ModelBinding\ModelBindingEndpoints.cs" />
+    <Compile Include="Model\DiagnosticChain.cs" />
+    <Compile Include="Model\ModelClasses.cs" />
     <Compile Include="Requests\BehaviorChainTraceTag.cs" />
     <Compile Include="Requests\BehaviorNodeTraceTag.cs" />
     <Compile Include="Requests\HttpRequestVisualization.cs" />
