--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -131,6 +131,7 @@
     <Compile Include="InteractionContextExtensions.cs" />
     <Compile Include="Model\DiagnosticChainTester.cs" />
     <Compile Include="Model\DiagnosticGroupTester.cs" />
+    <Compile Include="Model\FakeFubuDiagnostics.cs" />
     <Compile Include="Requests\BehaviorNodeTraceTagTester.cs" />
     <Compile Include="Requests\HttpRequestVisualizationTester.cs" />
     <Compile Include="Requests\RequestStepTester.cs" />
