--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -189,6 +189,7 @@
     <Compile Include="DiagnosticsSettings.cs" />
     <Compile Include="ModelBinding\ModelBindingEndpoints.cs" />
     <Compile Include="Model\DiagnosticChain.cs" />
+    <Compile Include="Model\GroupEndpoint.cs" />
     <Compile Include="Model\ModelClasses.cs" />
     <Compile Include="Requests\BehaviorChainTraceTag.cs" />
     <Compile Include="Requests\BehaviorNodeTraceTag.cs" />
